# assignment-12-Martinseeberg

./: CMakeLists.txt  Include duration cpp
src/: Duration.h  main.cpp
